Fixed header content positions and alignments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -221,14 +221,17 @@ button {
     z-index: 10;
     flex-shrink: 0;
     overflow: hidden; /* clip bar */
+    padding: 0 20px;
+    box-sizing: border-box;
 }
 
 .header-left {
     grid-column: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 4px;
+    align-items: center;
+    gap: 15px;
+    width: fit-content;    
 }
 
 .timer-pill-container {
@@ -260,17 +263,17 @@ button {
 .header-content {
     position: relative;
     z-index: 2;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     width: 100%;
     height: 100%;
     padding: 0 20px;
     box-sizing: border-box; /* Ensure padding doesn't overflow width */
+    justify-content: space-between;
 }
 
 .current-word {
-    grid-column: 2;
     font-size: 1.5rem;
     letter-spacing: 5px;
     font-weight: bold;
@@ -282,6 +285,8 @@ button {
     grid-column: 3;
     text-align: right;
     font-weight: bold;
+    display: inline-block;
+    width: fit-content;
 }
 
 /* Main Container (3 Columns) */
